syntax = "proto3";

option go_package = "pb";

package pb;

service PrefectureService {
  rpc GetPrefectures (InputGetPrefectures) returns (Prefectures) {}
}

message InputGetPrefectures {}

message Prefecture {
  int64 id                   = 1; // ID
  string name                = 2; // 名前
  string romaji              = 3; // 読み方（ローマ字）
}

message Prefectures {
  repeated Prefecture prefectures = 1;
}